# embedded_rust

./: .gitignore  Cargo.toml  README.md  video_to_raw.py  video_viewer.py
.cargo/: config.toml
src/: main.rs
src/animations/: badapple.raw  mod.rs  parkour.raw  rick_roll.raw
